<resources>
    <string name="app_name">eMenza</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="btnMenu">Glavni Meni</string>
    <string name="btnPayment">Uplata</string>
    <string name="activityPaymentName">Uplata</string>

    <string name="breakfast">Dorucak</string>
    <string name="lunch">Rucak</string>
    <string name="dinner">Vecera</string>
    <string name="btnConfirm">Potvrdi</string>

    <string name="minus">-</string>
    <string name="plus">+</string>

    <string-array name="paymentChoices">
        <item>Null</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
    <string name="title_activity_login">Prijavi se</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Lozinka</string>
    <string name="action_sign_in">Prijavi se</string>
    <string name="action_register">Registruj se</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="card_number">Broj kartice</string>
    <string name="confirm_password">Potvrdi lozinku</string>

    <string name="profile">Profil</string>
    <string name="restaurants">Odabir restorana</string>
    <string name="notifications">Obaveštenja</string>
    <string name="log_out">Odjavi se</string>
    <string name="register">Nemas nalog? Registruj se</string>

    <string name="already_registered">Vec si registrovan? Prijavi se</string>

    <string name="balance">Iznos na racunu: %1$s rsd</string>
    <string name="price">Cena: %1$s rsd</string>
    <string name="afterTransaction">Iznos posle transakcije: %1$s rsd</string>
    <string name="paymentPriceError">Cena je previsoka.</string>

    <string name="breakfastState">10</string>
    <string name="lunchState">10</string>
    <string name="dinnerState">10</string>


    <string name="profileName">Ime i prezime: </string>
    <string name="profileCollege">Studira na: </string>
    <string name="profileIndex">Broj indeksa: </string>
    <string name="profileCardNumber">Broj kartice: </string>
    <string name="profileBirthDate">Datum rodjenja: </string>
    <string name="profileDateOfIssue">Datum izdavanja kartice: </string>
    <string name="profileDateOfExpire">Vazi do: </string>


</resources>
