<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Payment">


    <Button
        android:id="@+id/btnMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ovalbutton"
        android:text="@string/btnMenu"
        android:textColor="#ffffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ovalbutton"
        android:text="@string/btnPayment"
        android:textColor="#ffffff"
        app:layout_constraintStart_toEndOf="@+id/btnMenu"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="94dp"
        android:layout_height="85dp"
        android:layout_gravity="center_horizontal"

        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:adjustViewBounds="true"
        android:background="#DCF27E2D"
        android:onClick="showPopup"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_logo_foreground"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="80dp"
        android:text="@string/breakfast"
        android:textSize="@dimen/textlarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMenu" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/lunch"
        android:textSize="@dimen/textlarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/dinner"
        android:textSize="@dimen/textlarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/large"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/colorAccent"
        android:text="@string/btnConfirm"
        android:textColor="@color/White"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/btnMinusBreakfast"
        android:layout_width="62dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="80dp"
        android:text="@string/minus"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/btnPayment" />

    <Button
        android:id="@+id/btnMinusDinner"
        android:layout_width="62dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="58dp"
        android:text="@string/minus"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/btnMinusLunch" />

    <Button
        android:id="@+id/btnMinusLunch"
        android:layout_width="62dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="56dp"
        android:text="@string/minus"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/btnMinusBreakfast" />

    <Button
        android:id="@+id/btnPlusBreakfast"
        android:layout_width="62dp"
        android:layout_height="38dp"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:text="@string/plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spinnerBreakfast"
        app:layout_constraintTop_toBottomOf="@+id/btnPayment" />

    <Button
        android:id="@+id/btnPlusDinner"
        android:layout_width="62dp"
        android:layout_height="38dp"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:text="@string/plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spinnerDinner"
        app:layout_constraintTop_toBottomOf="@+id/btnPlusLunch" />

    <Button
        android:id="@+id/btnPlusLunch"
        android:layout_width="62dp"
        android:layout_height="38dp"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:text="@string/plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spinnerLunch"
        app:layout_constraintTop_toBottomOf="@+id/btnPlusBreakfast" />

    <Spinner
        android:id="@+id/spinnerBreakfast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="90dp"
        app:layout_constraintStart_toEndOf="@+id/btnMinusBreakfast"
        app:layout_constraintTop_toBottomOf="@+id/btnPayment" />

    <Spinner
        android:id="@+id/spinnerDinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="70dp"
        app:layout_constraintStart_toEndOf="@+id/btnMinusDinner"
        app:layout_constraintTop_toBottomOf="@+id/spinnerLunch" />

    <Spinner
        android:id="@+id/spinnerLunch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="70dp"
        app:layout_constraintStart_toEndOf="@+id/btnMinusLunch"
        app:layout_constraintTop_toBottomOf="@+id/spinnerBreakfast" />

</androidx.constraintlayout.widget.ConstraintLayout>